Fixed scrollbar issue on debug page and no saved exercises text displaying when it shouldn't on the admin page

--- a/src/app/components/debug/debug.scss
+++ b/src/app/components/debug/debug.scss
@@ -58,7 +58,7 @@
   }
 
   .codeBlock {
-    overflow: scroll;
+    overflow: auto;
     margin: 5px;
     padding: 4px;
     min-height: 105px;
